// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MultipleFileUploadButton renders custom class names 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-multiple-file-upload__upload test"
  >
    <button
      aria-disabled="false"
      class="pf-v6-c-button pf-m-secondary"
      data-ouia-component-id="OUIA-Generated-Button-secondary-2"
      data-ouia-component-type="PF6/Button"
      data-ouia-safe="true"
      type="button"
    >
      <span
        class="pf-v6-c-button__text"
      >
        Upload
      </span>
    </button>
  </div>
</DocumentFragment>
`;

exports[`MultipleFileUploadButton renders with aria-label applied to the button 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-multiple-file-upload__upload"
  >
    <button
      aria-disabled="false"
      aria-label="test"
      class="pf-v6-c-button pf-m-secondary"
      data-ouia-component-id="OUIA-Generated-Button-secondary-3"
      data-ouia-component-type="PF6/Button"
      data-ouia-safe="true"
      type="button"
    >
      <span
        class="pf-v6-c-button__text"
      >
        Upload
      </span>
    </button>
  </div>
</DocumentFragment>
`;

exports[`MultipleFileUploadButton renders with expected class names 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-multiple-file-upload__upload"
  >
    <button
      aria-disabled="false"
      class="pf-v6-c-button pf-m-secondary"
      data-ouia-component-id="OUIA-Generated-Button-secondary-1"
      data-ouia-component-type="PF6/Button"
      data-ouia-safe="true"
      type="button"
    >
      <span
        class="pf-v6-c-button__text"
      >
        Upload
      </span>
    </button>
  </div>
</DocumentFragment>
`;

exports[`MultipleFileUploadButton renders with label applied to the button 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-multiple-file-upload__upload"
  >
    <button
      aria-disabled="false"
      class="pf-v6-c-button pf-m-secondary"
      data-ouia-component-id="OUIA-Generated-Button-secondary-4"
      data-ouia-component-type="PF6/Button"
      data-ouia-safe="true"
      type="button"
    >
      <span
        class="pf-v6-c-button__text"
      >
        test
      </span>
    </button>
  </div>
</DocumentFragment>
`;
